--- a/plugin.yml
+++ b/plugin.yml
@@ -4,3 +4,7 @@ api: 3.0.0-ALPHA10
 version: 0.0.1
 author: Muqsit
 website: https://github.com/Muqsit/WorldGuard
+commands:
+  worldguard:
+    description: World guard commands.
+    aliases: ["wg", "rg"]
